--- a/_posts/JavaScript/React(리액트_라이브러리)/2022-07-03-외부 API 호출한 것 React.js로 디자인까지.md
+++ b/_posts/JavaScript/React(리액트_라이브러리)/2022-07-03-외부 API 호출한 것 React.js로 디자인까지.md
@@ -319,7 +319,609 @@ export default MovieContainer;
 
 ### 컴포넌트 스타일 요소 구성
 
-**HTML 뼈대를 보고 태그에 이름을 붙이는 단계**
+#### HTML 뼈대를 보고 태그에 이름을 붙이는 단계
+
+**Movie.jsx를 구성한 뼈대**를 확인
+
+```jsx
+<div>
+    <div>
+        <img src={image} alt="movie-thumbnail"></img>
+    </div>
+    <div>
+        <a href={link}>
+            <h3>{title}</h3>
+            <h4>{subtitle}</h4>
+            <p>감독 : {director}</p>
+        </a>
+    </div>
+</div>
+```
+
+
+
+**components/Movie.style.js** 로 태그에 이름 붙혀 스타일 지정
+
+```js
+import styled from "@emotion/styled";
+
+export const StyleMovieItem = styled.div``;
+export const StyleMovieImageBox = styled.div``;
+export const StyleMovieImage = styled.img``;
+export const StyleMovieContentBox = styled.div``;
+export const StyleMovieAnchor = styled.a``;
+export const StyleMovieTitle = styled.h3``;
+export const StyleMovieSubtitle = styled.h4``;
+export const StyleMovieDirector = styled.p``;
+export const StyleMovieList = styled.div``;
+```
+
+
+
+#### 왼쪽 이미지와 오른쪽 텍스트 영역 스타일링
+
+**Movie.jsx**는 이름 붙힌 태그로 수정
+
+```jsx
+<StyleMovieItem>
+    <StyleMovieImageBox>
+        <StyleMovieImage src={image} alt="movie-thumbnail"></StyleMovieImage>
+    </StyleMovieImageBox>
+    <StyleMovieContentBox>
+        <StyleMovieAnchor href={link}>
+            <StyleMovieTitle>{title}</StyleMovieTitle>
+            <StyleMovieSubtitle>{subtitle}</StyleMovieSubtitle>
+            <StyleMovieDirector>감독 : {director}</StyleMovieDirector>
+        </StyleMovieAnchor>
+    </StyleMovieContentBox>
+</StyleMovieItem>
+
+// 중간부분 생략...
+// 여기 div도 수정한것(Movie보다 상위태그이며 좌우 padding 주기위함)
+<StyleMovieList> 
+    {movieList.map((movieItem) => {
+        return(
+            <Movie 
+                key={movieItem.title} // key도 보내줘야 안전
+                {...movieItem}>
+            </Movie>
+        )
+    })}
+</StyleMovieList>
+```
+
+
+
+**Movie.style.js** 에서 스타일들 수정
+
+```js
+import styled from "@emotion/styled";
+
+export const StyleMovieItem = styled.div`
+    // display는 화면을 배치하는 방법
+    display: flex; // flex란 유연성을 뜻함
+    flex-direction: row; // align(가로)와 justify(세로) 반대로 생각할 것
+    align-items: center;
+    
+    width:100%;
+    border: solid 1px #777; // 실선, 1px크기, #777색깔
+    border-radius: 20px; // 둥글게
+    // border-radius에 의해 끝쪽이 줄었지만 내부 요소는 오버할 수 있음
+    overflow: hidden; // 오버한 부분 hidden으로 숨김
+    box-shadow: 0px 3px 15px #0003; // 이 그림자 속성값을 추천
+
+    // scss문법이며, 두번째 요소부터 margin-top이 먹히는 특징
+    & + & {
+        margin-top: 20px;
+    }
+`;
+
+export const StyleMovieImageBox = styled.div`
+    display: flex;
+    width:40%;
+    height: 100%;
+`;
+
+export const StyleMovieImage = styled.img`
+    // display: block; 으로 해도됨
+    // block은 어떤 특정 구역을 차지해버림(빈부분없이 채움)
+    width:100%;
+`;
+
+export const StyleMovieContentBox = styled.div`
+    width: 60%; // 그림영역 40% 였었음
+    padding: 12px;
+`;
+
+export const StyleMovieAnchor = styled.a`
+    color:#222;
+    font-size: 12px;
+    text-align: center; // text 정렬
+    word-break: keep-all; // 텍스트들 줄 바꿈 속성(단어)
+    // break-all : 문자 단위로 줄바꿈
+    // keep-all : 단어 단위로 줄바꿈
+
+    text-decoration: none; // 밑줄 X
+    &:hover { // 마우스 hover때(&는 this로 생각할것)
+        text-decoration: underline; // 밑줄 O
+    }
+`;
+
+export const StyleMovieTitle = styled.h3`
+    color: #000;
+`;
+
+export const StyleMovieSubtitle = styled.h4`
+    color : #555;
+    margin-top: 8px;
+`;
+
+export const StyleMovieDirector = styled.p`
+    color: #999;
+    margin-top: 40px;
+`;
+
+export const StyleMovieList = styled.div`
+    padding: 0 80px; // 좌우 padding
+`;
+```
+
+
+
+### 문자열 내 태그 렌더링
+
+* 사진을 보면 title 부분이 처음봤던 디자인 도안과 다름. 이부분을 수정.
+
+![image-20220707221945764](/images/2022-07-03-외부 API 호출한 것 React.js로 디자인까지/image-20220707221945764.png)
+
+```jsx
+<StyleMovieTitle>{title}</StyleMovieTitle>
+// 부분을 아래 코드로 변환
+<StyleMovieTitle dangerouslySetInnerHTML={{ __html: title}}></StyleMovieTitle>
+```
+
+<br>
+
+## 데이터 추가 요청하기
+
+### 추가하는 버튼 컴포넌트 작성
+
+#### components/AppendButton.jsx
+
+* **상위 태그에서 추가하는 이벤트 리스너를 넘겨줄 예정이르모 onClick props를 선언**
+
+```jsx
+import { StyleAppendButton } from "./AppendButton.style";
+
+const AppendButton = ({onClick}) => {
+    return(
+        <StyleAppendButton onClick={onClick}>추가</StyleAppendButton>
+    )
+}
+
+export default AppendButton;
+```
+
+
+
+#### components/AppendButton.style.js
+
+* styled 객체에 .HTML태그명 이 아닌 괄호로 컴포넌트를 넣어주면 **해당 컴포넌트에 스타일 지정**
+
+* ButtonBase의 경우, 형태는 없고 클릭 시 Ripple(물결) 효과만 발생할 수 있는 요소를 만듬
+
+* 거기에 스타일을 지정하여 커스텀 물결 이벤트를 쉽게 만들 수 있는 장점이 있음
+
+```js
+import styled from "@emotion/styled";
+import {ButtonBase} from "@mui/material";
+
+export const StyleAppendButton = styled(ButtonBase)`
+    width: 100%;
+    height: 40px;
+
+    font-size: 20px;
+    color: #fff;
+    background-color: #06f;
+`;
+```
+
+
+
+### MovieContainer.jsx에 버튼 추가
+
+```jsx
+// 생략..
+<div>
+    <Movies movieList={movieList}/>
+    <AppendButton/>
+</div>
+```
+
+![image-20220707231309233](/images/2022-07-03-외부 API 호출한 것 React.js로 디자인까지/image-20220707231309233.png)
+
+
+
+### 요청 로직 수정 - fetch.js
+
+* 미리 작성한 부분인데 설명하자면
+* **마지막 리스트 기준으로 5개씩 추가**하여 받아오는 함수(**offset** 활용)
+* **URL은 주소**, **URI는 질의어까지** 포함
+* **qs 모듈** : 객체를 URI에 첨부하게끔 변경 or URI에 있는 데이터를 객체로 변환
+
+```js
+// fetch.js
+import qs from "qs";
+
+const URL = "/api/v1/search/movie.json";
+export const requestGetMovieList = async (offset =1, limit = 5) => {
+  const query = qs.stringify({
+    query: "어벤져스",
+    start: offset,
+    display: limit,
+  })
+  const URI = `${URL}?${query}`; // 객체를 URI에 첨부하게 변경
+// 생략...
+```
+
+
+
+### 요청 로직 수정 - MovieContainer.jsx
+
+* **API를 호출**할 때 start 매개변수를 **movieList.length + 1**로 넘김
+* **넘어온 data.items**는 **concat 메서드**로 **불변성**을 지키며 **movieList에 추가**
+  * 참고로 **data.items** 는 [{},{},...] 로 구성. 그런데도 **다시 배열 생성한것은 불변성 때문**
+  * **data.items는 5개의 값일 뿐 movieList는 이 추가되는 값들을 concat으로 계속 추가해야함**
+* **useCallback** 함수의 **deps 배열**에는 **movieList**가 추가 되어야 **두 번째 요청부터 정상 작동**함
+  * movieList 추가 안하면 u**seCallback은 빈배열일시 처음 만든 함수값만 사용**하기 때문에 1부터 5개만 계속 요청(요청했던 1~5개 데이터 또 요청.. 계속..반복..)
+  * 물론 useCallback을 사용안했다면 매번 렌더링때 새로 함수 만들테니 문제없겠지만, 최적화를 함께 하기 위해서 이부분도 자세히 알아둘것.
+* **useEffect의 deps 배열에 callApiGetMovieList 함수가 있다면**
+  * mount시 callApiGetMovieList함수 실행 -> movieList 변경 -> callApiGetMovieList함수 변경 -> useEffect 실행 -> 다시 callApiGetMovieList함수 실행... **무한 루프**가 발생
+  * 따라서 처음 mount시에만 실행위해 빈배열 넣었던것.
+
+```jsx
+// MovieContainer.jsx
+// 생략...
+const MovieContainer = () => {
+    const [movieList, setMovieList] = useState([]);
+    
+    const callApiGetMovieList = useCallback(async () => {
+        const data = await requestGetMovieList(movieList.length + 1); // 수정
+        const newMovieList = movieList.concat(...data.items); // 수정
+        // setMovieList(data.items) 이걸로하면 5개 값 추가가 아닌 아예 바뀜
+        setMovieList(newMovieList) // 수정
+    }, [movieList]) // useCallback
+
+    useEffect(() => {
+        // mount 시에만 API 요청
+        callApiGetMovieList();
+    }, []) // mount!!
+
+    return (
+        <div>
+            <Movies movieList={movieList}/>
+            <AppendButton onClick={callApiGetMovieList}/> <!--수정-->
+        </div>
+    );
+}
+```
+
+<br>
+
+## 데이터 체크하기
+
+### Checkbox 컴포넌트 만들기
+
+#### components/Checkbox.jsx
+
+* 모든 props를 객체로 통합하여 하위로 전달
+
+```jsx
+import { StyleCheckbox } from "./Checkbox.style";
+
+const Checkbox = (props) => {
+  // { checked, onChange }로 받는 방법이 풀어서 쓰면
+  // const { checked, onChange } = props; 와 동일함
+    return <StyleCheckbox {...props} />;
+}
+
+export default Checkbox;
+```
+
+
+
+#### components/Checkbox.style.js
+
+```js
+import styled from "@emotion/styled";
+import { Checkbox } from "@mui/material";
+// Material UI에 스타일을 적용하기 위해 가져옴
+
+export const StyleCheckbox = styled(Checkbox)`
+  // styled 객체에 .HTML태그명 이 아닌 괄호로 컴포넌트를 넣어주면 해당 컴포넌트에 스타일 지정
+  width: 48px;
+  height: 48px;
+`; // Material UI의 Checkbox에서, 크기를 48px로 변경한 스타일 컴포넌트(체크박스)
+
+```
+
+
+
+### Checkbox 추가하기
+
+#### Movie.style
+
+* **position 속성 사용**
+  * 체크박스 위치를 오른쪽 위로 위치 지정 간편히 하기 위함!
+
+```js
+// 생략...
+export const StyleMovieItem = styled.div`
+  position: relative;
+  // 이 요소를 상대적인 좌표로 지정할 수 있게 해줌
+  // 여기서 top, left, right, bottom 속성을 통해 값을 지정해주면 현재 위치 기준으로 이동
+  // 이 요소 하위 요소(자식, 손자 요소)에 position: absolute;를 적용하면 이 요소의 위치를 기준으로 적용
+// 생략...`;
+
+// 생략...
+export const StyleMovieCheckboxArea = styled.div`
+  position: absolute;
+  // absolute 요소는 position: relative; 가 적용되어 있는 가장 가까운 상위 요소를 기준으로 위치를 지정함
+
+  top: 6px;
+  right: 6px;
+  // 가장 가까운 상위 요소(StyleMovieItem)의 박스 내에, 위쪽에서 6px, 오른쪽에서 6px만큼 떨어진 곳에 위치시킴
+`; // Movie에서 Checkbox의 위치를 지정하기 위해 감싸는 스타일 컴포넌트
+```
+
+
+
+#### Movie
+
+```jsx
+<Checkbox /> 추가하기
+```
+
+
+
+### 데이터 구조 수정
+
+#### MovieContainer.jsx
+
+* 기존의 data.items에는 **checked**라는 프로퍼티 없으므로 **추가**
+* **props**로 전달할 **함수** 작성 후 **전달**
+  * link는 Movie.jsx에서 줄거임
+  * 일반적으로 아래로 전달 함수는 on이 아닌 handle 접두어 사용
+
+```jsx
+// MovieContainer.jsx
+const newItems = data.items.map((item) => { // map함수로 새로 배열 생성
+    return {...item, checkd: false} // checked 프로퍼티 추가한 객체
+})
+
+const handleChangeCheck = useCallback(
+    (link) => {
+        // link의 값을 가진 요소의 checked를 반대로 바꾸는 함수
+        // link를 유일한 값이라고 생각하고 사용
+        const newMovieList = movieList.map((movieItem)=>
+              link === movieItem.link
+              ? { ...movieItem, checked: !movieItem.checked }
+              : movieItem
+		)// movieItem의 link가 매개변수로 넘어온 link와 같다면 그 요소의 checked를 반대로 바꾸는 로직
+        setMovieList(newMovieList)
+    },
+    [movieList]
+);
+// 생략...
+<Movies movieList={movieList} onChangeCheck = {handleChangeCheck}/>
+```
+
+
+
+#### Movie.jsx
+
+리액트에도 이벤트 함수들이 있음. Checkbox에서 onChange, checked를 사용할거임.
+
+* **onChange 이벤트로 넣을 때 link 전달 위해 함수 미리 만들어 놓기**
+* **checked 이벤트 속성도 이용할것임**
+
+```jsx
+const Movie = ({ title, subtitle, image, link, director, checked, onChange}) => {
+    return (
+        <StyleMovieItem>
+			<!--생략...-->
+            <StyleMovieCheckboxArea>
+                <Checkbox checked={checked} onChange={onChange}/>
+            </StyleMovieCheckboxArea>
+        </StyleMovieItem>
+    );
+}
+
+const MovieList = ({movieList, onChangeCheck}) => {
+    return (
+        <StyleMovieList>
+            {movieList.map((movieItem) => {
+                return(
+                    <Movie 
+                    key={movieItem.title} // key도 보내줘야 안전
+                    {...movieItem}
+                    onChange={() => onChangeCheck(movieItem.link)}>
+                    </Movie>
+                    // onChangeCheck 함수에는 link 매개변수를 넣어주어야 하는데,
+                    // 클릭 이벤트로 넣을 때 link 매개변수를 전달하기 위해선 함수를 미리 만들어 놓아야 함
+                )
+            })}
+        </StyleMovieList>
+    )
+}
+```
+
+<br>
+
+## 데이터 전체 체크/해제
+
+### MovieContainer에 전체 체크박스 추가
+
+* 참고로 체크박스시 내부 체크유무 값은 잘 변경되지만, UI에 체크 유무 표시는 전부 변경시키거나 하진 않음. 그러나 내부 체크값은 잘 동작하다는점 참고
+
+#### containers/MovieContainer.style.js
+
+```js
+import styled from "@emotion/styled/macro";
+
+export const StyleMovieAllCheckArea = styled.div`
+  display: flex;
+  align-items: center; // 현재 flex의 배치 방향(가로)에 수직(세로) 배치를 중앙 정렬 => 수직 중앙 정렬
+  justify-content: flex-end; // 뒤쪽에서부터 요소를 위치시킴
+`; // 전체 선택이 위치한 영역의 스타일 컴포넌트
+
+export const StyleMovieAllCheckText = styled.p`
+  font-size: 14px;
+  color: ${(props) => (props.checked ? "#222" : "#999")};
+  // 텍스트의 props인 checked가 true이면 진한 검정, flase이면 연한 회색을 띔
+`; // 전체 선택 텍스트 스타일 컴포넌트
+
+```
+
+
+
+#### MovieContainer.jsx
+
+* **이벤트 함수까지 전부 작성**
+  * **AllChecked, onChangeAllCheck**
+
+```jsx
+const AllChecked = useMemo(() => {
+    return movieList.every((movieItem) => movieItem.checked);
+}, [movieList]); // movieList의 모든 요소가 갖고 있는 checked가 true인지 판단하는 useMemo
+// every 함수를 통해 모든 요소의 checked가 true이면 true를 AllChecked에 할당
+
+const onChangeAllCheck = useCallback(() => {
+    // movieList의 모든 요소의 checked를 AllChecked 상태의 반대로 바꾸는 함수
+    const newMovieList = movieList.map((movieItem) => ({
+        ...movieItem,
+        checked: !AllChecked,
+    })); // movieList의 모든 요소의 checked를 AllChecked 상태의 반대로 바꾸는 로직
+    setMovieList(newMovieList);
+}, [AllChecked, movieList]);
+
+<StyleMovieAllCheckArea>
+    <StyleMovieAllCheckText checked={AllChecked}>
+        전체 선택
+    </StyleMovieAllCheckText>
+    <Checkbox checked={AllChecked} onChange={onChangeAllCheck}/>
+</StyleMovieAllCheckArea>
+```
+
+<br>
+
+## 체크한 데이터 삭제하기
+
+* **체크박스 선택 안되어있으면 비활성화 할것임**
+
+
+
+### 삭제하는 버튼 컴포넌트 작성
+
+#### components/DeleteButton.style.js
+
+```jsx
+import styled from "@emotion/styled";
+import { ButtonBase } from "@mui/material";
+// Material UI에 스타일을 적용하기 위해 가져옴
+
+export const StyleDeleteButton = styled(ButtonBase)`
+  // styled 객체에 .HTML태그명 이 아닌 괄호로 컴포넌트를 넣어주면 해당 컴포넌트에 스타일 지정
+  // ButtonBase의 경우, 형태는 없고 클릭 시 Ripple(물결) 효과만 발생할 수 있는 요소를 만듬
+  // 거기에 스타일을 지정하여 커스텀 물결 이벤트를 쉽게 만들 수 있는 장점이 있음
+  width: 120px;
+  height: 40px;
+
+  font-size: 20px;
+  color: #fff;
+
+  background-color: ${(props) => (props.disabled ? "#f007" : "#f00")};
+  // Delete Button은 checked된 영화 목록이 없으면 비활성화 되는데, 시각적인 표시를 추가하기 위해서 사용
+  // props로 넘기면 @emotion/styled에서 접근 가능함
+  // disabled가 true이면 반투명한 빨간색, false이면 진한 빨간색을 띔
+`; // checked된 영화 목록을 삭제하는 버튼 스타일 컴포넌트
+
+```
+
+
+
+#### components/DeleteButton.jsx
+
+```jsx
+import { StyleDeleteButton } from "./DeleteButton.style";
+
+const DeleteButton = ({ onClick, disabled }) => {
+  // 삭제 함수를 클릭 이벤트로 사용하기 위해 onClick props 받아옴
+  // 또한, checked 상태인 영화 목록이 없으면 비활성화하기 위해 disabled props 받아옴
+  return (
+    <StyleDeleteButton onClick={onClick} disabled={disabled}>
+      삭제
+    </StyleDeleteButton>
+  );
+}; // checked 상태인 영화 목록을 삭제하기 위해 만든 버튼 컴포넌트
+
+export default DeleteButton;
+```
+
+
+
+### 체크된 요소만 삭제하는 함수 작성
+
+* **filter함수를 이용해 check된 것들은 제외하고 새로 movieList를 만드는것**
+
+```jsx
+// MovieContainer.jsx
+const onDeleteChecked = useCallback(() => {
+    const newMovieList = movieList.filter((movieItem) => !movieItem.checked);
+    setMovieList(newMovieList)
+},[movieList]);
+// 생략...
+<DeleteButton onClick={onDeleteChecked} />
+```
+
+
+
+### 하나도 선택되어있지 않을 때 버튼 비활성화
+
+* **every함수를 통해 전부 체크되어 있지 않다면 allNoneChecked 변수에 true 반환**
+  * disabled 속성값에 true를 줘서 비활성화
+
+```jsx
+const allNoneChecked = useMemo(() => {
+    return movieList.every((movieItem) => !movieItem.checked);
+}, [movieList]); 
+// 생략...
+<DeleteButton disabled={allNoneChecked} onClick={onDeleteChecked} />
+```
+
+
+
+## 최종 결과 확인
+
+![image-20220708042628303](/images/2022-07-03-외부 API 호출한 것 React.js로 디자인까지/image-20220708042628303.png)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
