--- a/_posts/JavaScript/React(리액트_라이브러리)/2022-07-03-외부 API 호출한 것 React.js로 디자인까지.md
+++ b/_posts/JavaScript/React(리액트_라이브러리)/2022-07-03-외부 API 호출한 것 React.js로 디자인까지.md
@@ -13,6 +13,35 @@ typora-root-url: ../../..
 
 
 
+## 기본 필요 지식
+
+**`React` 컴포넌트 내에서 수정시(state, props) 재렌더를 할텐데, 
+만약 어떠한 함수가 선언 되어 있다면 이 함수는 컴포넌트가 렌더링 될때마다 
+새로운 함수를 생성한다** 라는 등의 단점들을 `최적화`를 통해 예방  
+
+* `함수 예`로 **useCallback**은 **지정한 배열 값 변화**에만 **재렌더**를 하고, 나머진 재렌더 하지 않으니 최적화
+  * **지정값이 빈배열**일시 기존 **함수** 그대로 사용한다는 뜻. 새로 **함수** 생성될일이 없다.
+* `변수 예`로 **useMemo**는 **지정한 배열 값 변화**에만 **재렌더**를 하고, 나머진 재렌더 하지 않으니 최적화
+  * **지정값이 빈배열**일시 기존 **변수** 그대로 사용한다는 뜻. 새로 **변수** 생성될일이 없다.
+* `props 예`로 **memo**는 **지정한 props(매개변수)의 변화에만 재렌더**를 하고, 나머진 재렌더 하지 않으니 최적화
+* **useState**는  **컴포넌트 상태**를 관리. **재렌더시** 변수 새로 다시 선언이 아니라 관리중인 상태값으로 사용. 또한 해당 **상태(state)** 변경시 Virtual Dom에서 재렌더 여부 결정
+* **useEffect**는 진짜 LifeCycle의 재렌더(Update)와 유사. **지정한 배열 값의 변화에 실행을함.**
+
+
+
+**`LifeCycle`은 Mount, Update, UnMount 로 크게 3가지로 분류**
+
+* 참고로 Ctrl+S 이나, 웹 새로고침은 아마 첨부터 코드 실행하는것 같다. mount과정을 계속 거치길래 그렇게 판단 하였음.(useEffect로 확인해봄)
+* 맨 처음 컴포넌트가 **render** 될때는 **마운트** 과정을 거침
+  그러나 그 이후에 props, state가 변경되어 **render** 될 때는 마운트를 거치지 않음
+  그래서 **마운트(Mount)는 DOM 객체가 생성되고 브라우저에 나타나는 것을 의미**
+
+
+
+**참고로 import 문제는 default 로 export 아니면 무조건 {} 써줄것.**
+
+<br>
+
 ## 초기 폴더 구성
 
 **git bash**로 **npx create-react-app** 폴더명 으로 설치
@@ -423,7 +452,7 @@ export const StyleMovieImageBox = styled.div`
 `;
 
 export const StyleMovieImage = styled.img`
-    // display: block; 으로 해도됨
+	// img 태그는 기본적으로 inline-block 요소이므로 display: block; 으로 해도됨.
     // block은 어떤 특정 구역을 차지해버림(빈부분없이 채움)
     width:100%;
 `;
@@ -695,9 +724,11 @@ export const StyleMovieCheckboxArea = styled.div`
 
 ```jsx
 // MovieContainer.jsx
-const newItems = data.items.map((item) => { // map함수로 새로 배열 생성
-    return {...item, checkd: false} // checked 프로퍼티 추가한 객체
-})
+// const callApiGetMovieList 함수 내부 
+        const newItems = data.items.map((item) => {
+            return {...item,
+            checked: false,}
+        });
 
 const handleChangeCheck = useCallback(
     (link) => {
@@ -905,15 +936,365 @@ const allNoneChecked = useMemo(() => {
 
 ![image-20220708042628303](/images/2022-07-03-외부 API 호출한 것 React.js로 디자인까지/image-20220708042628303.png)
 
+<br>
+
+## `useState`의 동작 순서
+
+**MovieSetCallback.jsx 으로 최종 수정(최적화)**
+
+- `useState`로 반환받은 `setter` 함수는 **완전히 동기적으로(순차적으로) 동작하지 않습니다.**
+- `setState` 함수에 값을 매개변수로 넣어서 호출하면, 이는 `React`에 해당 값으로 변경하라는 동작을 요청하는 행위와 같습니다.
+  - 따라서 `setState`가 연속해서 호출되면, `React`에서 첫 번째 동작 요청 행위와, 두 번째 동작 요청 행위가 모두 실행되지만 `setState`에 넘어간 값이 한 상태를 기준으로 동작하기 때문에, 두 번쨰 동작 요청 행위만 실행된 것으로 판단합니다.
+
+- 이에 `setState` 함수에 콜백 함수를 매개변수로 넣어서 호출하는 방법이 있습니다.
+  - 콜백 함수의 인수로는 이전 상태가 넘어오며, 이전 상태를 통해 다음 상태를 연산하는 로직을 여러 번 호출하여도 정상적으로 동작합니다.
+  - 이를 `Functional Update`라고 합니다.
+
+> 이는 상태를 유지해야 할 권리를 사용자가 아닌 `React`로 전환할 수 있게 만드는 기법입니다.
+
+> 또한 `setState`에 값을 매개변수로 넣으면, `React`에서 기존 값과 비교하는 연산이 발생할 수 있기 때문에 성능적인 측면에서 콜백 함수를 매개변수로 넣는 것이 유리합니다.
+
+### 참고
+
+* \- [`React` `Hook` `setState`에 함수 전달](https://developer-talk.tistory.com/m/252)
+
+- [`/src/infos/MovieSetCallback.jsx`](./src/infos/MovieSetCallback.jsx)
+- `useState`가 완전히 `동기적`으로 작동하는것이 아니니까 혹시 모를 에러를 대비 및 성능 향상을 위해 `setState` 에 **값이 아닌 콜백함수를 매개변수**로 넣어서 호출한다.
+- 또한 **값이 아닌 콜백함수를 매개변수**로 넣었을때의 특징은 매개변수가 **자동으로 이전의 값**을 의미하게 된다. 그래서 상태 유지를 사용자가 아닌 **React**로 완전 전환할 수 있는것이다.
+
+```jsx
+import { useState, useCallback, useEffect, useMemo } from "react";
+
+import Loading from "../components/Loading";
+import { Movies } from "../components/Movie";
+import AppendButton from "../components/AppendButton";
+import DeleteButton from "../components/DeleteButton";
+import Checkbox from "../components/Checkbox";
+// 컴포넌트 가져옴
+
+import { requestGetMovieList } from "../apis/fetch";
+// api 요청 함수 가져옴
+
+import {
+  StyleMovieAllCheckArea,
+  StyleMovieAllCheckText,
+} from "../containers/MovieContainer.style";
+
+/**
+ * 영화의 목록을 관리하는 컨테이너 컴포넌트
+ * setState에서 값이 아닌 콜백 함수를 매개변수로 넘기는 컴포넌트
+ */
+const MovieContainer = () => {
+  const [loading, setLoading] = useState(false);
+  // 로딩 상태 state로 정의
+  const [movieList, setMovieList] = useState([]);
+  // 요청한 영화 리스트 state로 정의
+
+  const AllChecked = useMemo(() => {
+    return movieList.every((movieItem) => movieItem.checked);
+  }, [movieList]);
+
+  const allNoneChecked = useMemo(() => {
+    return movieList.every((movieItem) => !movieItem.checked);
+  }, [movieList]);
+
+  const callApiGetMovieList = useCallback(async () => {
+    // 영화 목록을 가져오는 API를 요청하는 함수
+    setLoading(true);
+    try {
+      const data = await requestGetMovieList(movieList.length + 1);
+      // 이 함수는 콜백 함수를 전달하는 setMovieList를 사용하여도
+      // 여기에서 movieList를 사용하기 때문에 deps 배열에 movieList를 넣어주어야 함
+      const newItems = data.items.map((item) => ({
+        ...item,
+        checked: false,
+      }));
+
+      setMovieList((prevMovieList) => {
+        const newMovieList = prevMovieList.concat(...newItems);
+        return newMovieList;
+        // 기존 movieList.concat 코드는 이 컴포넌트의 상태에 의존하는 것
+        // prevMovieList를 사용하면 React의 상태에 의존하게 됨
+        // 따라서 movieList를 사용할 필요가 없어짐
+      });
+    } catch (e) {
+      console.error(e);
+    }
+    setLoading(false);
+  }, [movieList]);
+
+  const handleChangeCheck = useCallback((link) => {
+    setMovieList((prevMovieList) => {
+      const newMovieList = prevMovieList.map((movieItem) =>
+        link === movieItem.link
+          ? { ...movieItem, checked: !movieItem.checked }
+          : movieItem
+      ); // prevMovieList를 참조하게 되어 더 이상 이 컴포넌트의 movieList에 의존하지 않기 때문에
+      // movieList의 값을 감지해야할 필요 또한 사라짐
+      return newMovieList;
+    });
+  }, []); // 이 함수는 mount 이후 단 한 번만 생성됨
+
+  const onChangeAllCheck = useCallback(() => {
+    // movieList의 모든 요소의 checked를 AllChecked 상태의 반대로 바꾸는 함수
+
+    setMovieList((prevMovieList) => {
+      const newMovieList = prevMovieList.map((movieItem) => ({
+        ...movieItem,
+        checked: !AllChecked,
+      })); // prevMovieList를 참조하게 되어 더 이상 이 컴포넌트의 movieList에 의존하지 않기 때문에
+      // movieList의 값을 감지해야할 필요 또한 사라짐
+      // 하지만 여전히 AllChecked의 값은 감지해야 함
+      return newMovieList;
+    });
+  }, [AllChecked]); // 이 함수는 movieList의 변경에는 생성되지 않으며, mount 시와 AllChecked가 변경되었을 때만 생성됨
+
+  const onDeleteChecked = useCallback(() => {
+    setMovieList((prevMovieList) => {
+      const newMovieList = prevMovieList.filter(
+        (movieItem) => !movieItem.checked
+      );
+      return newMovieList;
+    });
+  }, []); // 이 함수는 mount 이후 단 한 번만 생성됨
+
+  useEffect(() => {
+    // mount 시에만 API 요청
+    callApiGetMovieList();
+    // eslint-disable-next-line react-hooks/exhaustive-deps
+  }, []);
+
+  return (
+    <div>
+      <StyleMovieAllCheckArea>
+        <StyleMovieAllCheckText checked={AllChecked}>
+          전체 선택
+        </StyleMovieAllCheckText>
+        <Checkbox checked={AllChecked} onChange={onChangeAllCheck} />
+        <DeleteButton disabled={allNoneChecked} onClick={onDeleteChecked} />
+      </StyleMovieAllCheckArea>
+      <Movies movieList={movieList} onChangeCheck={handleChangeCheck} />
+      <Loading isLoading={loading} />
+      <AppendButton onClick={callApiGetMovieList} />
+    </div>
+  );
+};
+
+export default MovieContainer;
+```
+
+<br>
+
+## `useCallback`, `useEffect`, `useMemo`의 효율성
+
+- 불필요한 데이터, 함수의 생성과, 값의 변화를 감지하는 점에서 굉장히 용이하고 효율적으로 사용할 수 있는 장점이 있습니다.
+- 하지만 이를 과다하게 사용할 경우 `React`에서 값을 비교, 체크해야할 요소가 늘어나 오히려 그 요소를 비교 연산하는데 시간과 비용을 더 많이 사용하게 되는 경우가 발생할 수 있습니다.
+
+> 항상 적절히 사용해야 하며, 특히 값의 변화를 감지하고 새로운 로직을 작성하는 `useEffect`의 사용을 최소화 해야 합니다.
+
+### 참고
+
+- [`React`에서 `Hook`의 올바른 사용](https://sangcho.tistory.com/entry/React-useEffect-4Tip)
+- [`Hook`이 실패한 설계인 이유?](<https://jong-hui.github.io/devlog/2021/01/08/(React)%ED%9B%85%EC%9D%B4-%EC%8B%A4%ED%8C%A8%ED%95%9C-%EC%84%A4%EA%B3%84%EC%9D%B8-%EC%9D%B4%EC%9C%A0-4%EA%B0%80%EC%A7%80/>)
+
+<br>
+
+## (추가) 로딩 부분
+
+* 백드롭(backdrop)이란 새로운 화면이 뜨는 방식의 UI 형태라고 생각하면 됩니다.
+* 중간에 코드가 에러 발생하면 무한로딩이 되버리기 때문에 이를 방지하기 위해 try,catch구문 사용
+  * 만약, 로딩화면이 너무빨리지나가서 확인해보고 싶다면 예외처리 제거하고 일부러 에러코드 적용해서 로딩화면을 확인할 것.
+
+```jsx
+// Loading.jsx
+import { Backdrop, CircularProgress } from "@mui/material";
+// 로딩 컴포넌트에서 사용할 Material UI 컴포넌트 가져옴
+
+const Loading = ({ isLoading }) => {
+  // isLoaing props의 값이 true면 로딩 상태 렌더
+  // false면 로딩 상태 렌더하지 않음
+  return (
+    <Backdrop open={isLoading}>
+      <CircularProgress />
+    </Backdrop>
+  );
+};
+
+export default Loading;
+```
+
+```jsx
+// MovieContainer.jsx
+const callApiGetMovieList = useCallback(async () => {
+    // 영화 목록을 가져오는 API를 요청하는 함수
+    setLoading(true); // loading 시작
+    try { // 무한로딩 방지(try,catch)
+      const data = await requestGetMovieList(movieList.length + 1);
+      const newItems = data.items.map((item) => ({
+        ...item,
+        checked: false,
+      }));
+
+      setMovieList((prevMovieList) => {
+        const newMovieList = prevMovieList.concat(...newItems);
+        return newMovieList;
+      });
+    } catch (e) {
+      console.error(e);
+    }
+    setLoading(false); // loading 끝
+  }, [movieList]);
+
+// 생략...
+<Loading isLoading={loading} />
+```
+
+<br>
+
+## (추가) index, App 스타일링
+
+* 기존은 index.css, App.css로 구성이 되어있는데 이것을
+* index.style.js, App.style.js로 새로 만들어 스타일링 해보겠다.
+* 추가로 @emotion라이브러리의 Global 컴포넌트를 활용해 전역 CSS 작성할 코드 등록하겠다
+
+### 기존 index.js
+
+```js
+import React from 'react';
+import ReactDOM from 'react-dom/client';
+import './index.css';
+import App from './App';
+import reportWebVitals from './reportWebVitals';
+
+const root = ReactDOM.createRoot(document.getElementById('root'));
+root.render(
+  //<React.StrictMode>
+    <App />
+  //</React.StrictMode>
+);
+
+// If you want to start measuring performance in your app, pass a function
+// to log results (for example: reportWebVitals(console.log))
+// or send to an analytics endpoint. Learn more: https://bit.ly/CRA-vitals
+reportWebVitals();
+```
 
 
 
+### 교체 index.js
+
+* **index.css**를 사용안하니까 import에서 **제외**
+* 참고로 div로 감싼 이유는 React.StrictMode는 useEffect가 자꾸 2번 실행되어서 처리하였다.
+
+```js
+import React from 'react';
+import ReactDOM from 'react-dom/client';
+import App from './App';
+import reportWebVitals from './reportWebVitals';
+
+// 추가
+import { Global } from "@emotion/react";
+// 전역 CSS를 등록할 컴포넌트 가져옴
+import { GlobalStyles } from "./index.style";
+// Global 컴포넌트에 등록할 전역 CSS 작성한 코드 가져옴
+
+const root = ReactDOM.createRoot(document.getElementById('root'));
+root.render(
+  <div>
+    <App />
+    <Global styles={GlobalStyles}/>
+  </div>
+);
+
+// If you want to start measuring performance in your app, pass a function
+// to log results (for example: reportWebVitals(console.log))
+// or send to an analytics endpoint. Learn more: https://bit.ly/CRA-vitals
+reportWebVitals();
+```
 
 
 
+### 추가 index.style.js
+
+```js
+import { css } from "@emotion/react";
+// CSS 코드를 작성하는 모듈 가져옴
+
+export const GlobalStyles = css`
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  // 모든 요소에 CSS 적용함
+`;
+```
 
 
 
+### 기존 App.js
+
+```js
+import logo from './logo.svg';
+import './App.css';
+import MovieContainer from './infos/MovieSetCallback';
+
+function App() {
+  return (
+    <div className="App">
+      <MovieContainer></MovieContainer>
+    </div>
+  );
+}
+
+export default App;
+```
+
+
+
+### 교체 App.js
+
+* **App.style.js**를 새로 **만들어**서 구성하였고, 기존 **App.css**는 import에서 **제외**
+
+```js
+import { StyleApp, StyleAppContent } from "./App.style";
+import MovieContainer from './infos/MovieSetCallback';
+
+const App = () => {
+  return (
+    <StyleApp>
+      <StyleAppContent>
+        <MovieContainer />
+      </StyleAppContent>
+    </StyleApp>
+  );
+}
+
+export default App;
+```
+
+
+
+### 추가 App.style.j.s
+
+```js
+import styled from "@emotion/styled/macro";
+
+export const StyleApp = styled.main`
+  width: 100%;
+  min-height: 100vh; // 화면의 높이를 가져옴
+  // 1vh는 화면의 높이 / 100
+  background-color: #ebebeb;
+`;
+
+export const StyleAppContent = styled.article`
+  width: 600px;
+  height: 100%;
+  margin: 0 auto;
+  // 이 요소를 지정하면 상위 요소의 크기 기준으로 세로 축 중앙 정렬
+  background-color: #fff;
+`;
+```
 
 
 
