--- a/_posts/JavaScript/React(리액트_라이브러리)/2022-07-01-React 컴포넌트 렌더링 최적화.md
+++ b/_posts/JavaScript/React(리액트_라이브러리)/2022-07-01-React 컴포넌트 렌더링 최적화.md
@@ -679,3 +679,137 @@ const FunctionCheckbox = memo(
 ```
 
 <br>
+
+## `useState`의 동작 순서 - Functional Update
+
+- `useState`로 반환받은 `setter` 함수는 **완전히 동기적으로(순차적으로) 동작하지 않습니다.**
+- `setState` 함수에 값을 매개변수로 넣어서 호출하면, 이는 `React`에 해당 값으로 변경하라는 동작을 요청하는 행위와 같습니다.
+  - 따라서 `setState`가 연속해서 호출되면, `React`에서 첫 번째 동작 요청 행위와, 두 번째 동작 요청 행위가 모두 실행되지만 `setState`에 넘어간 값이 한 상태를 기준으로 동작하기 때문에, 두 번쨰 동작 요청 행위만 실행된 것으로 판단합니다.
+
+- 이에 `setState` 함수에 콜백 함수를 매개변수로 넣어서 호출하는 방법이 있습니다.
+  - 콜백 함수의 인수로는 이전 상태가 넘어오며, 이전 상태를 통해 **다음 상태를 연산하는 로직을 여러 번 호출하여도 정상적으로 동작합니다.**
+  - 이를 `Functional Update`라고 합니다.
+
+> 이는 상태를 유지해야 할 권리를 사용자가 아닌 `React`로 전환할 수 있게 만드는 기법입니다.
+
+> 또한 `setState`에 값을 매개변수로 넣으면, `React`에서 기존 값과 비교하는 연산이 발생할 수 있기 때문에 성능적인 측면에서 콜백 함수를 매개변수로 넣는 것이 유리합니다.
+
+### 참고
+
+- [`React` `Hook` `setState`에 함수 전달](https://developer-talk.tistory.com/m/252)
+
+```jsx
+import { useState, useCallback } from "react";
+
+const FunctionalUpdate = () => {
+  const [count, setCount] = useState(0);
+
+  // 값을 매개변수로 전달한 setCount 함수
+  const onClick = useCallback(() => {
+    setCount(count + 1);
+
+    console.log(count); // count의 값이 변하지 않음
+
+    setCount(count + 2);
+    // 두 번째로 실행한 setState만 실제로 적용
+  }, [count]);
+  // deps 배열에 count를 넣어 주지 않으면, onClick 함수는 count의 값을 계속해서 0으로 기억하게 됨
+
+  // 콜백 함수를 매개변수로 전달한 setCount 함수
+  const onClickFunctionalUpdate = useCallback(() => {
+    setCount((prevCount) => {
+      // 이전 count의 상태가 넘어옴
+      return prevCount + 1;
+    }); // 콜백 함수의 인자로는 이전 상태 값이 전달됨
+
+    // 콜백 함수에서 다음으로 설정할 상태 값을 return 하면 적용됨
+    // console.log(count); // count의 값이 변하지 않음
+
+    setCount((prevCount) => {
+      return prevCount + 2;
+    }); // 첫 번째로 전달한 setState와 두 번째로 전달한 setState 모두 실행
+  }, []);
+  // deps 배열에 count를 넣어 주지 않아도, onClickFunctionalUpdate 함수는 이 컴포넌트의 count를 사용하는게 아닌,
+  // React에서 전달한 prevCount를 사용하기 때문에 문제가 되지 않음
+  // 상태를 관리해야 할 책임을 React로 전가한 것
+
+  return <div onClick={onClick}>카운터 값: {count}</div>;
+};
+
+// 현재 count의 값이 0일 때, 값을 매개변수로 전달한 setCount 함수 실행 과정
+//
+// 1. 다음 count의 상태를 1(count + 1 === 0 + 1)로 만들라고 React에 전달
+// 2. console.log 함수 실행
+// 3. 다음 count의 상태를 2(count + 2 === 0 + 2)로 만들라고 React에 전달
+// 4. 함수 종료
+
+// 이에 React는 처음에 1로 상태를 변경한 후에 즉시 2로 상태를 변경하므로
+// 두 번째 setCount만 적용된 것처럼 보임
+
+// 현재 count의 값이 0일 때, 콜백 함수를 매개변수로 전달한 setCount 함수 실행 과정
+
+// 1. 다음 count의 상태를 이전 상태 + 1(prevCount + 1 === 0 + 1 === 1)로 변경하는 함수를 실행하라고 React에 전달
+// 2. console.log 함수 실행
+// 3. 다음 count의 상태를 이전 상태 + 2(prevCount + 2 === 1 + 2 === 3)로 변경하는 함수를 실행하라고 React에 전달
+// 4. 함수 종료
+
+// 이에 React는 처음에 1로 상태를 변경한 후에 두 번째로 실행할 함수에서,
+// prevCount에 1을 넣고 실행하기 때문에 두 setCount 모두 적용
+
+export default FunctionalUpdate;
+```
+
+<br>
+
+## `input` 요소의 관리
+
+- `input` 요소를 상태(`state`)로 관리하여 변화마다 리렌더링 할 경우, 항상 최선의 선택은 아닙니다.
+- 꼭 실시간으로 변화를 감지해야 하는 경우가 아니라면, 값이 변경될 때마다 다른 컴포넌트의 리렌더 로직에도 영향을 끼치는 `input` 요소는 성능 저하로 작용하기 쉽습니다.
+- **즉, 실시간 변화를 감지하는 경우가 아닌경우는 무분별하게 useState로 관리하지 말자는 것입니다.**
+- 이런 경우 `form` 태그의 `onSubmit`를 요소를 사용한 후 넘어오는 이벤트 객체 `e`로부터 `input` 요소를 추출하여 값에 접근하는 방식이나, `useRef`를 사용하는 등의 다른 방식을 통해서 충분히 구현할 수 있습니다.
+
+### 참고
+
+```jsx
+import { useState, useRef } from "react";
+
+const InputManage = () => {
+  const inputRef = useRef(null);
+  const [value, setValue] = useState("");
+
+  const onChange = (e) => setValue(e.target.value);
+  // 이런 작성 방식은 onChange 이벤트가 발생할 때마다 React에게 리렌더 로직을 요청하는 것과 같음
+  // 실제로 input 요소는 onChange 이벤트마다 리렌더가 됨
+
+  const onSubmit = (e) => {
+    // e 객체에 하위 로직을 전달 받을 수 있는 방법이 여러 가지 존재함
+    // 이를 통해 꼭 상태로 관리하여 리렌더하는 방식을 취하지 않아도 무방
+    // inputRef.current. 이처럼 useRef를 사용하여 ref로 접근 가능함
+  };
+
+  return (
+    <form onSubmit={onSubmit}>
+      <input type="text" value={value} onChange={onChange} />
+      <input type="text" ref={inputRef} />
+      <button type="submit">전송</button>
+    </form>
+  );
+};
+export default InputManage;
+```
+
+<br>
+
+## `useCallback`, `useEffect`, `useMemo`의 효율성
+
+- 불필요한 데이터, 함수의 생성과, 값의 변화를 감지하는 점에서 굉장히 용이하고 효율적으로 사용할 수 있는 장점이 있습니다.
+- 하지만 이를 과다하게 사용할 경우 `React`에서 값을 비교, 체크해야할 요소가 늘어나 오히려 그 요소를 비교 연산하는데 시간과 비용을 더 많이 사용하게 되는 경우가 발생할 수 있습니다.
+
+> 항상 적절히 사용해야 하며, 특히 값의 변화를 감지하고 새로운 로직을 작성하는 `useEffect`의 사용을 최소화 해야 합니다.
+
+### 참고
+
+- [`React`에서 `Hook`의 올바른 사용](https://sangcho.tistory.com/entry/React-useEffect-4Tip)
+- [`Hook`이 실패한 설계인 이유?](<https://jong-hui.github.io/devlog/2021/01/08/(React)%ED%9B%85%EC%9D%B4-%EC%8B%A4%ED%8C%A8%ED%95%9C-%EC%84%A4%EA%B3%84%EC%9D%B8-%EC%9D%B4%EC%9C%A0-4%EA%B0%80%EC%A7%80/>)
+
+<br>
